--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(odbc_get_id)
 export(odbc_get_multi_id)
 export(odbc_insert)
 export(read_object_environment)
+export(trend_class)
 exportClasses(gitConnection)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbExistsTable)
@@ -45,6 +46,7 @@ importFrom(assertthat,assert_that)
 importFrom(assertthat,has_name)
 importFrom(assertthat,is.count)
 importFrom(assertthat,is.flag)
+importFrom(assertthat,is.number)
 importFrom(assertthat,is.string)
 importFrom(assertthat,noNA)
 importFrom(dplyr,"%>%")
